# DSA_project

./: CMakeLists.txt  README.md  docker-compose.yml
demo/: main.c
examples/example_binary_search_tree/: example_usage.c
examples/examples_c_vector/: example_basic.c  example_complex.c  example_resize.c
examples/examples_hash_map/: example_basic.c  example_collisions.c  example_performance.c
src/: bfs.c  binary_search_tree.c  bst_demo.c  c_graph_internal.h  c_hash_map.c  c_vector.c  dfs.c  dijkstra.c  graph.c  graph_demo.c  hash_map_demo.c  vector_demo.c
src/search/: binary_search_tree.c
tests/: CMakeLists.txt  test_binary_search_tree.c  test_hash_map.c  vector_test.c
tests/test_graph/: test_algorithms.c  test_graph_operations.c  test_runner.c
